# Sports_Friday

./: .dockerignore  .env.example  .gitignore  README.md  REPOSITORY_TREE.md  docker-compose.yml  eslint.config.js  package.json  sports-notification-app-architecture.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  db.py  deps.py  logging_conf.py  main.py  queue.py  rate_limit.py  redis_client.py  schemas.py  security.py
backend/app/repositories/: match_events.py  matches.py  muted_matches.py  push_subscriptions.py  subscriptions.py  teams.py  users.py
backend/app/routers/: auth.py  matches.py  push.py  subscriptions.py  teams.py
backend/app/services/: auth_service.py  subscription_service.py  team_service.py
backend/app/sports_api/: client.py  mock.py  normalize.py
backend/app/workers/: dedup_key.py  diff.py  discovery.py  notifier.py  poller.py  web_push.py
backend/scripts/: check_sports_api.py  demo_flow.py  gen_vapid.py  live_setup.py  live_test.sh  migrate.py  seed.py
backend/tests/: test_dedup_key.py  test_diff.py  test_discovery.py  test_match_detail.py  test_mute.py  test_pipeline.py
deploy/: Dockerfile.api  Dockerfile.backend  Dockerfile.workers  render.yaml  vercel.json
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: README.md  manifest.webmanifest
frontend/src/: App.jsx  main.jsx  service-worker.js  (+1 more)
migrations/: 001_init.sql  002_match_events.sql  003_indexes.sql  004_match_minute.sql  005_muted_matches.sql
scripts/: gen-vapid-keys.js  migrate.js  seed.js
(+9 files in other folders)
