[project]
name = "sports-notification-backend"
version = "0.1.0"
description = "FastAPI backend + workers for the sports notification app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "redis>=5.0",
    "arq>=0.26",
    "pywebpush>=2.0",
    "py-vapid>=1.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Single shared event loop for the whole session so module-level async clients
# (asyncpg pool, redis) stay valid across the DB-backed integration tests.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
